Add SASS/CSS WebPack stuff, TodoMVC sytlesheets

--- a/public/index.html
+++ b/public/index.html
@@ -2,10 +2,10 @@
 <html>
   <head>
     <meta charset="UTF-8">
-    <title>Hello World</title>
+    <title>React &amp; Redux - orbiteleven - ABQ WebGeeks</title>
   </head>
   <body>
-    <div id="app-container"></div>
+    <div id="todo-app"></div>
 
     <script src="/main.js"></script>
   </body>
