Refactor for basic TodoMVC boilerplate

--- a/public/index.html
+++ b/public/index.html
@@ -2,10 +2,15 @@
 <html>
   <head>
     <meta charset="UTF-8">
-    <title>React &amp; Redux - orbiteleven - ABQ WebGeeks</title>
+    <title>React Talk - orbiteleven - ABQ WebGeeks</title>
   </head>
   <body>
-    <div id="todo-app"></div>
+    <section id="app-container"></section>
+
+    <footer class="info">
+      <p>Created by <a href="https://github.com/orbiteleven">Damon Toal-Rossi</a></p>
+      <p>Part of <a href="http://todomvc.com">TodoMVC</a></p>
+    </footer>
 
     <script src="/main.js"></script>
   </body>
